--- a/config/locales/rails_admin.es.yml
+++ b/config/locales/rails_admin.es.yml
@@ -17,6 +17,8 @@ es:
       add_new: "Agregar"
       show: "Mostrar"
       ago: "atrás"
+    footer:
+      copyright: "RailsAdmin 2011"
     history:
       name: "Histórico"
       page_name: "Histórico de %{name}"
