--- a/config/locales/rails_admin.zh_cn.yml
+++ b/config/locales/rails_admin.zh_cn.yml
@@ -17,6 +17,8 @@ zh_cn:
       add_new: "添加"
       show: "查看"
       ago: "以前"
+    footer:
+      copyright: "RailsAdmin 2011"
     history:
       name: "历史"
       page_name: "%{name}的历史"
