--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -52,7 +52,8 @@ en:
       required: "Required"
       optional: "Optional"
       one_char: "character"
-      many_chars: "characters or fewer"
+      #many_chars: "characters or fewer"
+      char_length_up_to: "length up to"
       char_length_of: "length of"
       chosen: "Chosen %{name}"
       select_choice: "Select your choice(s) and click"
