--- a/config/locales/rails_admin.ru.yml
+++ b/config/locales/rails_admin.ru.yml
@@ -37,7 +37,7 @@ ru:
       delete_selected: "Удалить выбранные"
       export_action: "Экспортировать данное представление"
       show_action: "Показать"
-      export_selected: "Эспортировать выделенное"
+      export_selected: "Экспортировать выбранные"
       add_new: "Добавить"
       search: "ПОИСК"
       select: "Выберите %{name} для редактирования"
