'обновить' means refresh, and here update stands for 'change the model', which is better translated to Russian as 'изменить'

--- a/config/locales/rails_admin.ru.yml
+++ b/config/locales/rails_admin.ru.yml
@@ -90,7 +90,7 @@ ru:
     actions:
       create: "создать"
       created: "создан"
-      update: "обновить"
+      update: "изменить"
       updated: "обновлен"
       delete: "удалить"
       deleted: "удален"
