keep update/updated naming consistent in Russian locale

--- a/config/locales/rails_admin.ru.yml
+++ b/config/locales/rails_admin.ru.yml
@@ -91,7 +91,7 @@ ru:
       create: "создать"
       created: "создан"
       update: "изменить"
-      updated: "обновлен"
+      updated: "изменен"
       delete: "удалить"
       deleted: "удален"
       export: "экспортировать"
