raised 404 on object/model not found fix #898

--- a/config/locales/rails_admin.de.yml
+++ b/config/locales/rails_admin.de.yml
@@ -88,6 +88,8 @@ de:
       successful: "%{name} wurde erfolgreich %{action}"
       error: "%{name} wurde nicht %{action}"
       noaction: "Keine Aktionen durchgeführt"
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
       create: "erstellen"
       created: "erstellt"
