--- a/config/locales/rails_admin.fi.yml
+++ b/config/locales/rails_admin.fi.yml
@@ -85,6 +85,8 @@ fi:
       successful: "%{name} %{action} onnistuneesti"
       error: "Toimenpide epäonnistui eikä %{name} tyyppistä tietuetta %{action}"
       noaction: "Mitään ei tehty"
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
       create: "luo"
       created: "luotu"
