--- a/config/locales/rails_admin.nb.yml
+++ b/config/locales/rails_admin.nb.yml
@@ -89,6 +89,8 @@ nb:
       successful: "%{name} er nå %{action}"
       error: "%{name} ble ikke %{action}"
       noaction: "Ingen handlinger ble utført"
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
       create: "opprette"
       created: "opprettet"
