--- a/config/locales/rails_admin.bg.yml
+++ b/config/locales/rails_admin.bg.yml
@@ -82,6 +82,8 @@ bg:
       successful: "Успешно изпълнение на действие: %{action}, за модел: %{name}"
       error: "Неуспешно изпълнение на действие: %{action}, за модел: %{name}"
       noaction: "Не са предприети никакви действия"
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
       create: "създай"
       created: "създаване"
