--- a/config/locales/rails_admin.it.yml
+++ b/config/locales/rails_admin.it.yml
@@ -87,6 +87,8 @@ it:
       successful: "L' elemento %{name} è stato %{action} con successo"
       error: "L' elemento %{name} non è stato %{action}"
       noaction: "L' azione è stata annullata"
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
       create: "crea"
       created: "creato"
