--- a/config/locales/rails_admin.lv.yml
+++ b/config/locales/rails_admin.lv.yml
@@ -79,6 +79,8 @@ lv:
       successful: "%{name} veiksmīgi %{action}"
       error: "%{name} netika %{action}"
       noaction: "Netika veiktas darbības"
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
       create: "izveidot"
       created: "izveidots"
