--- a/config/locales/rails_admin.nl.yml
+++ b/config/locales/rails_admin.nl.yml
@@ -64,6 +64,8 @@ nl:
       successful: "%{name} succesvol %{action}"
       error: "%{name} onsuccesvol %{action}"
       noaction: "Geen acties uitgevoerd"
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
       create: "aanmaken"
       created: "aangemaakt"
