--- a/config/locales/rails_admin.pl.yml
+++ b/config/locales/rails_admin.pl.yml
@@ -88,6 +88,8 @@ pl:
       successful: "%{name} został %{action}"
       error: "%{name} nie został %{action}"
       noaction: "Nie się nie stało"
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
       create: "dodaj"
       created: "dodany"
