--- a/config/locales/rails_admin.pt-PT.yml
+++ b/config/locales/rails_admin.pt-PT.yml
@@ -87,6 +87,8 @@ pt-PT:
       successful: "Um registo de %{name}, foi %{action} com sucesso"
       error: "Um registo de %{name} falhou ao ser %{action}"
       noaction: "Nenhuma acção foi executada."
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
       create: "criar"
       created: "criado"
