--- a/config/locales/rails_admin.ru.yml
+++ b/config/locales/rails_admin.ru.yml
@@ -87,6 +87,8 @@ ru:
       successful: "%{name} был %{action}"
       error: "Не получилось %{action} %{name}"
       noaction: "Никаких изменений не выполнено"
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
       create: "создать"
       created: "создан"
