--- a/config/locales/rails_admin.sv.yml
+++ b/config/locales/rails_admin.sv.yml
@@ -82,6 +82,8 @@ sv:
       successful: "%{name} är %{action}"
       error: "lyckades inte %{action} %{name}"
       noaction: "Inga åtgärder vidtogs"
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
       create: "skapa"
       created: "skapad"
