--- a/config/locales/rails_admin.tr.yml
+++ b/config/locales/rails_admin.tr.yml
@@ -82,6 +82,8 @@ tr:
       successful: "%{name} başarıyla %{action}"
       error: "İşlem gerçekleştirilemedi"
       noaction: "Hiçbir işlem yapılmadı."
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
       create: "yarat"
       created: "yaratıldı"
