--- a/config/locales/rails_admin.uk.yml
+++ b/config/locales/rails_admin.uk.yml
@@ -79,6 +79,8 @@ uk:
       successful: "%{name} успішно %{action}"
       error: "неможливо %{action} %{name}"
       noaction: "Нічого не відбувалось"
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
     actions:
       create: "створити"
       created: "створено"
