moved history controller/views to where it belongs

--- a/config/locales/rails_admin.bg.yml
+++ b/config/locales/rails_admin.bg.yml
@@ -95,12 +95,12 @@ bg:
       exported: "изнасяне"
     breadcrumbs:
       delete: "заличи"
-      for_object: "история"
+      history_show: "история"
       show: "покажи"
       edit: "редактирай"
       export: "изнеси"
       bulk_destroy: "заличи"
       new: "нов"
-      for_model: "история"
+      history_index: "история"
       index: "списък"
       dashboard: "табло"
