--- a/config/locales/rails_admin.de.yml
+++ b/config/locales/rails_admin.de.yml
@@ -101,12 +101,12 @@ de:
       exported: "exportiert"
     breadcrumbs:
       delete: "löschen"
-      for_object: "historie"
+      history_show: "historie"
       show: "anzeigen"
       edit: "bearbeiten"
       export: "exportieren"
       bulk_destroy: "löschen"
       new: "neu"
-      for_model: "Historie"
+      history_index: "Historie"
       index: "Liste"
       dashboard: "Übersicht"
