--- a/config/locales/rails_admin.es.yml
+++ b/config/locales/rails_admin.es.yml
@@ -105,12 +105,12 @@ es:
       exported: "exportado"
     breadcrumbs:
       delete: "borrar"
-      for_object: "historial"
+      history_show: "historial"
       edit: "editar"
       export: "exportar"
       show: "mostrar"
       bulk_destroy: "borrar"
       new: "nuevo"
-      for_model: "historial"
+      history_index: "historial"
       index: "lista"
       dashboard: "panel general"
