--- a/config/locales/rails_admin.fi.yml
+++ b/config/locales/rails_admin.fi.yml
@@ -98,12 +98,12 @@ fi:
       exported: "viety"
     breadcrumbs:
       delete: "poista"
-      for_object: "historia"
+      history_show: "historia"
       show: "näytä"
       edit: "muokkaa"
       export: "vie"
       bulk_destroy: "poista"
       new: "luo uusi"
-      for_model: "historia"
+      history_index: "historia"
       index: "listaa"
       dashboard: "hallintapaneeli"
