--- a/config/locales/rails_admin.it.yml
+++ b/config/locales/rails_admin.it.yml
@@ -100,12 +100,12 @@ it:
       exported: "esportato"
     breadcrumbs:
       delete: "elimina"
-      for_object: "cronologia"
+      history_show: "cronologia"
       show: "mostra"
       edit: "modifica"
       export: "esporta"
       bulk_destroy: "elimina"
       new: "nuovo"
-      for_model: "cronologia"
+      history_index: "cronologia"
       index: "elenco"
       dashboard: "riepilogo"
