--- a/config/locales/rails_admin.ja.yml
+++ b/config/locales/rails_admin.ja.yml
@@ -101,12 +101,12 @@ ja:
       exported: "エクスポート"
     breadcrumbs:
       delete: "削除"
-      for_object: "履歴"
+      history_show: "履歴"
       show: "詳細"
       edit: "編集"
       export: "エクスポート"
       bulk_destroy: "削除"
       new: "追加"
-      for_model: "履歴"
+      history_index: "履歴"
       index: "一覧"
       dashboard: "管理画面トップ"
