--- a/config/locales/rails_admin.nb.yml
+++ b/config/locales/rails_admin.nb.yml
@@ -102,12 +102,12 @@ nb:
       exported: "eksportert"
     breadcrumbs:
       delete: "slette"
-      for_object: "historikk"
+      history_show: "historikk"
       show: "vise"
       edit: "redigere"
       export: "eksportere"
       bulk_destroy: "slette"
       new: "ny"
-      for_model: "historikk"
+      history_index: "historikk"
       index: "liste"
       dashboard: "dashboard"
