--- a/config/locales/rails_admin.pt-BR.yml
+++ b/config/locales/rails_admin.pt-BR.yml
@@ -100,12 +100,12 @@ pt-BR:
       exported: "exportado"
     breadcrumbs:
       delete: "deletar"
-      for_object: "história"
+      history_show: "história"
       show: "visualizar"
       edit: "editar"
       export: "exportar"
       bulk_destroy: "deletar"
       new: "novo"
-      for_model: "história"
+      history_index: "história"
       index: "listar"
       dashboard: "administração"
