--- a/config/locales/rails_admin.ro.yml
+++ b/config/locales/rails_admin.ro.yml
@@ -104,12 +104,12 @@ ro:
       exported: "exportat(ă)"
     breadcrumbs:
       delete: "șterge"
-      for_object: "istoric"
+      history_show: "istoric"
       show: "arată"
       edit: "modifică"
       export: "exportă"
       bulk_destroy: "șterge"
       new: "nou"
-      for_model: "istoric"
+      history_index: "istoric"
       index: "listează"
       dashboard: "tablou"
