--- a/config/locales/rails_admin.ru.yml
+++ b/config/locales/rails_admin.ru.yml
@@ -100,12 +100,12 @@ ru:
       exported: "экспортировано"
     breadcrumbs:
       delete: "удаление"
-      for_object: "история"
+      history_show: "история"
       show: "просмотр"
       edit: "редактирование"
       export: "экспорт"
       bulk_destroy: "удаление"
       new: "создание"
-      for_model: "история"
+      history_index: "история"
       index: "список"
       dashboard: "панель"
