--- a/config/locales/rails_admin.zh-CN.yml
+++ b/config/locales/rails_admin.zh-CN.yml
@@ -100,13 +100,13 @@ zh-CN:
       exported: "已导出"
     breadcrumbs:
       delete: "删除"
-      for_object: "历史"
+      history_show: "历史"
       show: "显示"
       edit: "编辑"
       export: "导出"
       bulk_destroy: "删除"
       new: "新建"
-      for_model: "历史"
+      history_index: "历史"
       index: "列表"
       dashboard: "首页"
   datetime:
