--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -106,12 +106,12 @@ en:
       exported: "exported"
     breadcrumbs:
       delete: "delete"
-      for_object: "history"
+      history_show: "history"
       show: "show"
       edit: "edit"
       export: "export"
       bulk_destroy: "delete"
       new: "new"
-      for_model: "history"
+      history_index: "history"
       index: "list"
       dashboard: "dashboard"
