--- a/config/locales/rails_admin.fr.yml
+++ b/config/locales/rails_admin.fr.yml
@@ -103,11 +103,11 @@ fr:
     breadcrumbs:
       delete: "suppression"
       show: "détail"
-      for_object: "historique"
+      history_show: "historique"
       edit: "édition"
       export: "export"
       bulk_destroy: "suppression"
       new: "nouveau"
-      for_model: "historique"
+      history_index: "historique"
       index: "liste"
       dashboard: "tableau de bord"
