--- a/config/locales/rails_admin.nl.yml
+++ b/config/locales/rails_admin.nl.yml
@@ -75,12 +75,12 @@ nl:
       deleted: "verwijderd"
     breadcrumbs:
       delete: "delete"
-      for_object: "history"
+      history_show: "history"
       edit: "edit"
       export: "export"
       bulk_destroy: "delete"
       new: "new"
-      for_model: "history"
+      history_index: "history"
       index: "list"
       dashboard: "dashboard"
   datetime:
