--- a/config/locales/rails_admin.sv.yml
+++ b/config/locales/rails_admin.sv.yml
@@ -95,11 +95,11 @@ sv:
       exported: "exported"
     breadcrumbs:
       delete: "delete"
-      for_object: "history"
+      history_show: "history"
       edit: "edit"
       export: "export"
       bulk_destroy: "delete"
       new: "new"
-      for_model: "history"
+      history_index: "history"
       index: "list"
       dashboard: "dashboard"
