--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -11,7 +11,7 @@ en:
       truncate: "…"
   admin:
     dashboard:
-      pagename: "Site administration"
+      page_name: "Site administration"
       name: "Dashboard"
       model_name: "Model name"
       last_used: "Last used"
@@ -21,17 +21,17 @@ en:
       show: "Show"
       ago: "ago"
       navigation: "Navigation"
-    history:
-      name: "History"
-      page_name: "History for %{name}"
-      no_activity: "No Activity"
+    history_index:
+      page_name: "History for %{model_label_plural}"
+    history_show:
+      page_name: "History for %{model_label} '%{object_label}'"
     show:
+      page_name: "Details for %{model_label} '%{object_label}'"
       show_in_app: "Show in app"
-      page_name: "Details for %{name}"
       no_file_found: "No file found"
-    credentials:
-      log_out: "Log out"
     index:
+      page_name: "List of %{model_label_plural}"
+      
       edit_action: "Edit"
       delete_action: "Delete"
       selected: "Selected"
@@ -44,10 +44,14 @@ en:
       add_new: "Add new"
       search: "Search"
       refresh: "Refresh"
-      select: "Select %{name} to edit"
       show_all: "Show all"
       add_filter: "Add filter"
     new:
+      page_name: "New %{model_label}"
+      action: "create"
+      action_done: "created"
+      
+      cancel: "Cancel"
       basic_info: "Basic info"
       required: "Required"
       optional: "Optional"
@@ -63,14 +67,26 @@ en:
       save: "Save"
       save_and_add_another: "Save and add another"
       save_and_edit: "Save and edit"
-      cancel: "Cancel"
+    edit:
+      page_name: "Update %{model_label} '%{object_label}'"
+      action: "update"
+      action_done: "updated"
     delete:
+      page_name: "Delete %{model_label} '%{object_label}'"
+      action: "delete"
+      action_done: "deleted"
+      
       all_of_the_following_related_items_will_be_deleted: "? The following related items may be deleted or orphaned:"
       are_you_sure_you_want_to_delete_the_object: "Are you sure you want to delete this %{model_name}"
       confirmation: "Yes, I'm sure"
       delete_confirmation: "Delete confirmation"
       bulk_delete: "The following objects will be deleted, which may delete or orphan some of their related dependencies:"
     export:
+      page_name: "Export %{model_label}"
+      bulk_action: "Export selected %{model_label_plural}"
+      action: "export"
+      action_done: "exported"
+      
       confirmation: "Export to %{name}"
       select: "Select fields to export"
       fields_from: "Fields from %{name}"
@@ -89,21 +105,19 @@ en:
         default_col_sep: ","
         col_sep: "Column separator"
         col_sep_help: "Leave blank for default ('%{value}')" # value is default_col_sep
+    bulk_delete:
+      page_name: "Delete %{model_label_plural}"
+    history:
+      name: "History"
+      no_activity: "No Activity"
+    credentials:
+      log_out: "Log out"
     flash:
       successful: "%{name} successfully %{action}"
       error: "%{name} failed to be %{action}"
       noaction: "No actions were taken"
       model_not_found: "Model '%{model}' could not be found"
       object_not_found: "%{model} with id '%{id}' could not be found"
-    actions:
-      create: "create"
-      created: "created"
-      update: "update"
-      updated: "updated"
-      delete: "delete"
-      deleted: "deleted"
-      export: "export"
-      exported: "exported"
     breadcrumbs:
       delete: "delete"
       history_show: "history"
