--- a/config/locales/rails_admin.pt-PT.yml
+++ b/config/locales/rails_admin.pt-PT.yml
@@ -11,7 +11,7 @@ pt-PT:
       truncate: "…"
   admin:
     dashboard:
-      pagename: "Administração do site"
+      page_name: "Administração do site"
       name: "Painel"
       model_name: "Nome do modelo"
       last_used: "Última utilização"
